<resources>
    <string name="app_name">Onesentence</string>
    <string name="about">about</string>
    <string name="confirmButton">Confirm</string>
    <string name="ListEmpty">add a new sentence to start</string>
    <string name="newsentence">New sentence</string>
    <string name="add">"Add "</string>
    <string name="sentence">Sentence</string>
    <string name="KeyExists">already Exists，you might want to add something else?</string>
    <string name="AlreadyAdd">Add</string>
    <string name="ok">OK</string>
    <string name="remove">Remove</string>
    <string name="theme">Theme</string>
    <string name="follow_system">Follow System</string>
    <string name="light_mode">Light</string>
    <string name="grey_mode">Grey</string>
    <string name="widget_configure">Widget configure</string>
    <string name="configure_empty">It\'s quiet empty here....</string>
    <string name="dark_mode">AMOLED Dark</string>
    <string name="sentence_attributes">Sentence Attributes</string>
    <string name="sentence_size">Sentence Size:</string>
    <string name="sentence_color">Sentence Color:</string>
    <string name="change_success">Successfully apply changes</string>
    <string name="author_name">Made by KenMizz</string>
    <string name="channel_description">This notification channel is only for showing sentence notification</string>
    <string name="channel_name">Sentence Notification</string>
    <string name="set_long_time_notification">Set long time Notification</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_setence_notification">You sure you want to set sentence as notification?</string>
    <string name="coolapk_hyperlink"><a href="http://www.coolapk.com/u/618459">CoolApk</a></string>
    <string name="sentenceExists">already exists.</string>
    <string name="sentence_list">Sentence List</string>
    <string name="opensource_license">License</string>
    <string name="new_sentence_list">New sentence list</string>
    <string name="list_name">Sentence list name</string>
    <string name="successfully_add_sentence_list">Successfully create sentence list _key_</string>
    <string name="fail_add_sentence_list">Sentence list _key_ has already exists</string>
    <string name="SentenceListEmpty">add a new sentence list to start</string>
    <string name="edit">Edit</string>
    <string name="dialog_sentence_list_empty">You will need to add sentence first before you put it in the list</string>
    <string name="github_hyperlink"><a href="https://github.com/KenMizz/Onesentence/tree/master">Github</a></string>
    <string name="remove_sentence_list">Sentence list _key_ removed</string>
    <string name="use">use</string>
    <string name="text_size">Text Size:</string>
</resources>
