<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/ThemeSwitchRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RadioButton
            android:id="@+id/follow_system_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_system"
            android:onClick="switchThemeOption"/>

        <RadioButton
            android:id="@+id/light_mode_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_mode" />

        <RadioButton
            android:id="@+id/dark_mode_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode" />
    </RadioGroup>
</RelativeLayout>