<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/ThemeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/follow_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?colorOnSurface"
            android:text="@string/follow_system" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/light_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?colorOnSurface"
            android:text="@string/light_mode" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/grey_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?colorOnSurface"
            android:text="@string/grey_mode" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?colorOnSurface"
            android:text="@string/dark_mode" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>